--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,7 @@ name: plugin_screeb
 description: A flutter plugin to integrate Screeb mobile sdk for Android and/or iOS.
 version: 0.0.1
 homepage: https://screeb.app
+repository: https://github.com/ScreebApp/flutter-screeb-plugin
 
 environment:
   sdk: ">=2.15.0 <3.0.0"
