[EVOL] - Support SDK initialization as part of the plugin - Manage platform specific SDKs versions internally
[WIP]
Update example

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -48,4 +48,5 @@ android {
 dependencies {
     implementation "app.screeb.sdk:android-sdk:1.1.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'app.screeb.sdk:android-sdk:1.1.0'
 }
