--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,5 @@
 group 'app.screeb.plugin_screeb'
-version '0.0.3'
+version '0.0.4'
 
 buildscript {
     ext.kotlin_version = '1.6.0'
@@ -46,6 +46,6 @@ android {
 }
 
 dependencies {
-    implementation "app.screeb.sdk:android-sdk:1.3.0"
+    implementation "app.screeb.sdk:survey:1.4.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
