--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: plugin_screeb
-description: A Flutter plugin to integrate Screeb mobile sdk for Android and/or iOS.
-version: 0.2.6
+description: Continuous Product Discovery
+version: 0.2.7
 homepage: https://screeb.app
 repository: https://github.com/ScreebApp/flutter-screeb-plugin
 
