--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: plugin_screeb
 description: Continuous Product Discovery
-version: 0.2.7
+version: 1.0.0-rc.1
 homepage: https://screeb.app
 repository: https://github.com/ScreebApp/flutter-screeb-plugin
 
