--- a/android/build.gradle
+++ b/android/build.gradle
@@ -46,6 +46,6 @@ android {
 }
 
 dependencies {
-    implementation "app.screeb.sdk:survey:2.0.0-rc.2"
+    implementation "app.screeb.sdk:survey:2.0.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
