--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: plugin_screeb
 description: Continuous Product Discovery
-version: 1.0.0-rc.2
+version: 2.0.0
 homepage: https://screeb.app
 repository: https://github.com/ScreebApp/flutter-screeb-plugin
 
