--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,6 +26,7 @@ apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 31
+    namespace 'app.screeb.plugin_screeb'
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
